[package]
name = "lpc55-usbhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.6.15", features = ["device"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
lpc55-hal = "0.3.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
vcell = "0.1.3"
nb = "1.1.0"
